(ocamllex (modules lexer))
(ocamlyacc (modules parser))

(library
  (name MinCaml)
  (public_name joe.lib)
  (modules (:standard \ main))
  (flags (-w -4-33-40-41))
  (libraries str)
  (preprocess (pps ppx_deriving.show))
  (foreign_stubs (language c) (names float)))

(executable
  (name main)
  (public_name joe)
  (flags (-w -4-33-40-41))
  (modules Main)
  (package joe)
  (libraries MinCaml x64 arm64))
