(library
 (name BacCaml)
 (public_name joevm.lib)
 (modules (:standard \ main))
 (flags (-w -4-33-40-41))
 (libraries str MinCaml)
 (preprocess (pps ppx_deriving.show ppx_deriving.enum)))

(executable
 (name main)
 (public_name joevm)
 (flags (-w -4-33-40-41))
 (modules Main)
 (package joevm)
 (libraries MinCaml BacCaml))
