(library
 (name BacCaml)
 (public_name vm.lib)
 (modules (:standard \ main))
 (flags (-w -4-33-40-41))
 (libraries str MinCaml)
 (preprocess (pps ppx_deriving.show ppx_deriving.enum)))

(executable
 (name main)
 (public_name vm)
 (flags (-w -4-33-40-41))
 (modules Main)
 (package vm)
 (libraries MinCaml BacCaml))
